# Advent_of_Code

./: .gitignore
2015/: pom.xml
2015/src/main/java/no/sanderolin/: Main.java
2015/src/main/java/no/sanderolin/day01/: NotQuiteLisp01.java  NotQuiteLisp02.java
2015/src/main/java/no/sanderolin/day02/: IWasToldThereWouldBeNoMath01.java  IWasToldThereWouldBeNoMath02.java
2015/src/main/java/no/sanderolin/day03/: PerfectlySphericalHousesInAVacuum01.java  PerfectlySphericalHousesInAVacuum02.java
2015/src/main/java/no/sanderolin/day04/: TheIdealStockingStuffer01.java  (+1 more)
2022/day01/: calorie_counting_01.py  calorie_counting_02.py
2022/day02/: rock_paper_scissors_01.py
2023/day01/: trebuchet_01.py  trebuchet_02.py
2023/day02/: cube_conundrum_01.js  cube_conundrum_02.js
2023/day03/: CMakeLists.txt  common_structs.h  gear_ratios_01.cpp  gear_ratios_01.h  gear_ratios_02.cpp  gear_ratios_02.h  main.cpp
2023/day04/: CMakeLists.txt  main.c  scratchcards.h  scratchcards_01.c  scratchcards_02.c
2023/day05/: if_you_give_a_seed_a_fertilizer_01.js  if_you_give_a_seed_a_fertilizer_02.js
2023/day06/: wait_for_it_01.js  wait_for_it_02.js
2023/day07/: camel_cards_01.cpp  camel_cards_01.h  camel_cards_02.cpp  camel_cards_02.h  common_structs.h  main.cpp
2023/day08/: common_structs.h  haunted_wasteland_01.cpp  haunted_wasteland_01.h  haunted_wasteland_02.cpp  haunted_wasteland_02.h  main.cpp
2024/: pom.xml
2024/advent_of_code_2024/: pom.xml
2024/src/main/java/no/sanderolin/: Main.java
day01/: trebuchet.py  trebuchet_01.py  trebuchet_02.py
(+40 files in other folders)
